[gd_scene load_steps=4 format=3 uid="uid://cfevcosht37o1"]

[ext_resource type="Script" path="res://Scripts/randomDocumentCreator.gd" id="1_6pemm"]
[ext_resource type="PackedScene" uid="uid://8th500agj2su" path="res://Scenes/document.tscn" id="1_ft2gg"]
[ext_resource type="PackedScene" uid="uid://kvwthbb5sybd" path="res://Scenes/idCard.tscn" id="2_b865g"]

[node name="randomDocumentCreator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6pemm")

[node name="idCard" parent="." instance=ExtResource("2_b865g")]
position = Vector2(316, 559)
scale = Vector2(4, 4)

[node name="document" parent="." instance=ExtResource("1_ft2gg")]
position = Vector2(1387, 559)
scale = Vector2(3, 3)

[node name="idName" type="Label" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 608.0
offset_right = 653.0
offset_bottom = 693.0
theme_override_font_sizes/font_size = 55
text = "idName"

[node name="idNumber" type="Label" parent="."]
layout_mode = 0
offset_left = 187.0
offset_top = 801.0
offset_right = 661.0
offset_bottom = 886.0
theme_override_font_sizes/font_size = 55
text = "idNumber"

[node name="documentName" type="Label" parent="."]
layout_mode = 0
offset_left = 1132.0
offset_top = 305.0
offset_right = 1560.0
offset_bottom = 396.0
theme_override_font_sizes/font_size = 40
text = "documentName"

[node name="documentNumber" type="Label" parent="."]
layout_mode = 0
offset_left = 1120.0
offset_top = 487.0
offset_right = 1579.0
offset_bottom = 584.0
theme_override_font_sizes/font_size = 40
text = "documentNumber"

[node name="documentIllness" type="Label" parent="."]
layout_mode = 0
offset_left = 1128.0
offset_top = 686.0
offset_right = 1707.0
offset_bottom = 771.0
theme_override_font_sizes/font_size = 40
text = "documentIllness"

[node name="Create New Documents" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 114.0
offset_top = 949.0
offset_right = 519.0
offset_bottom = 1068.0
theme_override_font_sizes/font_size = 50
text = "Create New Documents"

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="pressed" from="Create New Documents" to="." method="_on_create_new_documents_pressed"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
